--- a/homePage/homeBodyComponent/homeBody.css
+++ b/homePage/homeBodyComponent/homeBody.css
@@ -26,17 +26,53 @@ body {
   height: 100%;
 }
 
+img {
+  display: block;
+}
+
 .homeBodyContainer {
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  overflow-y: auto;
 }
 .homeBodyContainer .welcomeSection {
+  flex-basis: 40vh;
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  width: 100%;
+  padding: 3rem;
+  /*@media (max-height: 1000px) { 
+      flex-grow: 1;
+  }*/
 }
 .homeBodyContainer .welcomeSection .welcomeContainer {
+  flex: 1 1;
+  padding: 5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 1rem;
+}
+.homeBodyContainer .welcomeSection .welcomeContainer img {
+  width: 100%;
+  padding-block: 2rem;
+}
+.homeBodyContainer .welcomeSection .welcomeContainer p {
+  padding-inline: auto;
+  padding-block: 2rem;
+  font-size: small;
+  text-align: center;
+}
+@media (min-width: 1000px) {
+  .homeBodyContainer .welcomeSection .welcomeContainer {
+    flex: 0 0 75%;
+  }
 }
 .homeBodyContainer .categoriesSection {
   display: flex;
