--- a/css/base.scss
+++ b/css/base.scss
@@ -26,3 +26,32 @@ body {
     padding: 0;
     height: 100%;
 }
+
+.image-box {
+    position: relative;
+}
+
+.image-box.square { 
+    padding-top: 100%; /* 1:1 aspect ratio */
+}
+
+.image-box.horizzontal-rectangle-16-9 { 
+    padding-top: 56.25%; /* 16:9 aspect ratio */
+}
+
+.image-box.vertical-rectangle-2-3 { 
+    padding-top: 150% /* 2:3 aspect ratio */
+}
+
+.image-box.horizzontal-rectangle-3-2 { 
+    padding-top: 66.67% /* 3:2 aspect ratio */
+}
+
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
