--- a/homePage/aboutUsSectionComponent/aboutUsSectionComponent.css
+++ b/homePage/aboutUsSectionComponent/aboutUsSectionComponent.css
@@ -58,11 +58,49 @@ img {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  /*.image-box::before { // FOR SETTING OVERLAY USING PSEUDO ELEMENTS
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); // Black overlay with 50% transparency
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+      z-index: 1;
+  }
+
+  .image-box:hover::before { // OVERLAY OPACITY BEFORE HOVERING
+      opacity: 1;
+  }*/
+}
+.aboutUsSection .split .aboutUsContentContainer .image-box {
+  width: 66.67%;
+  padding-top: 100%;
+  position: relative;
 }
 .aboutUsSection .split .aboutUsContentContainer img {
-  width: 60%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
 }
-.aboutUsSection .split .aboutUsContentContainer p {
+.aboutUsSection .split .aboutUsContentContainer .image-box img {
+  transition: transform 0.3s ease-in-out;
+}
+.aboutUsSection .split .aboutUsContentContainer .image-box:hover img {
+  transform: scale(1.1);
+}
+.aboutUsSection .split .aboutUsContentContainer .text-container {
+  width: 80%;
+  font-size: 16px;
+  line-height: 1.6;
+}
+.aboutUsSection .split .aboutUsContentContainer .text-container p {
   text-align: center;
 }
 
