--- a/homePage/aboutUsSectionComponent/aboutUsSectionComponent.scss
+++ b/homePage/aboutUsSectionComponent/aboutUsSectionComponent.scss
@@ -34,13 +34,59 @@ img {
             align-items: center;
             gap: 2rem;
 
-            img{
-                width: 60%;
+            .image-box {
+                width: 66.67%; // Aspect ratio * 100 -> In this case the aspect ratio is 2/3 so ((2/3)*100) = 66.7%
+                padding-top: 100%; 
+                position: relative;
             }
 
-            p {
-                text-align: center;
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 0;
             }
+
+            /*.image-box::before { // FOR SETTING OVERLAY USING PSEUDO ELEMENTS OPACITT WHEN HOVERING
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5); // Black overlay with 50% transparency
+                opacity: 0;
+                transition: opacity 0.3s ease-in-out;
+                z-index: 1;
+            }
+            
+            .image-box:hover::before { // OVERLAY OPACITY BEFORE HOVERING
+                opacity: 1;
+            }*/
+
+            
+            .image-box img {
+                transition: transform 0.3s ease-in-out;
+            }
+
+            .image-box:hover img {
+                transform: scale(1.1);
+            }
+
+
+            .text-container {
+                width: 80%; 
+                font-size: 16px; 
+                line-height: 1.6; 
+
+                p {
+                    text-align: center;
+                }
+            }
+
         }
     }
 
